
2018-07-14  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (get_screen_item_line_and_col): fixed bug #514, where
	  length of elementary items with a LINE clause was ignored when
	  calculating the COL of subsequent items.

2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): display maximum size on overflow

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 again; this time
	  where $ would incorrectly float before a string of +/-.

2018-06-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: bug #527 system call x'91' *always* uses three parameters

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* common.h, intrinsic.c: Added CONTENT-LENGTH and CONTENTS-OF

2018-06-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: allow to override COB_EXPIMP, especially for allowing
	  static builds on _WIN32 via -DCOB_EXPIMP=extern

2018-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [_WIN32]: only define __GMP_LIBGMP_DLL if it is not
	  defined already, allowing to use a static version by defining
	  __GMP_LIBGMP_DLL to 0
	* Makefile.am (install-data-hook): added missing $(DESTDIR), as
	  reported by Eric Gallager in bug #73

2018-05-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open): fix for bug #520
	  check f->fd before using it to prevent SIGSEGV on OPEN OUTPUT
	* common.c (cob_sig_handler): minor format adjustment

2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_display): cater for HAVE_POPEN
	* common.h, fileio.c [__ORANGEC__]: minor adjustments for
	  preprocessor defines
	* common.c: added OrangeC version info
	* reportio.c: removed unneeded header and defines

2018-04-16  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c:
	   - HOME and END toggle on current column.
	   - Backspace beep column 1.
